dev/cloudflare/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soludev
  labels:
    app.kubernetes.io/part-of: soludev-workload
