dev/cloudflare/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-and-https
  namespace: kaiohz
spec:
  podSelector: {cloudflared}
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80   # si besoin HTTP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
